hphp/hack/test/typecheck/shape32.php
<?hh // partial

class Foo {
  const X = 'Y';
}

type Bar = Foo;

type S = shape(Bar::X => string);
